--- a/Web/index.html
+++ b/Web/index.html
@@ -15,20 +15,23 @@
         </div>
         <div class="item">
             <img src="1.png" alt="" class="img">
-            <button class="btn" id="btn2">Котик</button>
-        </div>
-        <div class="item">
-            <img src="1.png" alt="" class="img">
-            <button class="btn" id="btn3">Котик</button>
-        </div>
-        <div class="item">
-            <img src="1.png" alt="" class="img">
-            <button class="btn" id="btn4">Котик</button>
+            <button class="btn" id="btn2">Супер Котик на тесте</button>
         </div>
     </div>
 </div>
-<div class="usercard" id="usercard">
 
+<div class="inputbox" style=" margin-top: 50px">
+    <input required="required" type="text" id="InputUserInfo">
+    <span>UserInfo</span>
+    <i></i>
+</div>
+
+<div style=" margin-top: 50px">
+    <button onclick="saveUserInfo()" class="btn">Сохранить</button>
+</div>
+
+<div style=" margin-top: 50px">
+    <button id="btn4" class="btn">Закрыть</button>
 </div>
 
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
